batch: readded --enable-native-access option to bat script